fix: stlye bleeding issue due to overlaping classes

--- a/eComerce/client/src/pages/Auth/Auth.Style.scss
+++ b/eComerce/client/src/pages/Auth/Auth.Style.scss
@@ -1,4 +1,4 @@
-.container {
+.authContainer {
   background: rgb(226, 159, 252);
   background: url("/img/autum.webp");
   width: 100%;
